test_programs/compile_failure/nested_slice_declared_type/src/main.nr
fn main(x: field, y: pub field) {
    assert(x != y);

    let slice: [[field]] = [];
    assert(slice.len() != 10);
}
